# RYpe

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  TECH_DEBT.md  build_example.bash  deny.toml  example.c  generate_reads.sh  generate_short_reads.sh  main2.py  ref.fa  rype.h  test_ry.py  test_ry_pe.py
.githooks/: pre-commit
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/: PLAN-coderev.md  PLAN-config-support.md  PLAN-log-ratio.md  PLAN-techdebt.md  PLAN-trim-to-and-minimum-length.md  REFACTORING-PLAN.md  WASM.md  architecture.md  interface-issues.md
examples/: README.md  arrow_build_bench.rs  arrow_example.c  arrow_extraction_example.c  basic_example.c  bench_e2e_classification.rs  bench_filtered_load.rs  bench_fixed_impl.rs  cluster_example.c  ctypes_extraction_example.py  explore_row_group_stats.rs  extraction_example.c  parquet_main_poc.rs  parquet_poc.rs  pyarrow_build_example.py  pyarrow_extraction_example.py
scripts/: generate_config.py
src/: c_api.rs  classify.rs  config.rs  constants.rs  encoding.rs  error.rs  extraction.rs  index.rs  inverted.rs  lib.rs  logging.rs  main.rs  memory.rs  parquet_index.rs  sharded.rs  sharded_main.rs  types.rs  workspace.rs
src/arrow/: cluster.rs  error.rs  extraction.rs  input.rs  mod.rs  output.rs  schema.rs  stream.rs
src/classify/: batch.rs  best_hit.rs  common.rs  log_ratio.rs  merge_join.rs  mod.rs  scoring.rs  sharded.rs
src/cluster/: chain.rs  containment.rs  edges.rs  greedy.rs  mod.rs  types.rs
src/commands/: args.rs  classify.rs  cluster.rs  helpers.rs  index.rs  inspect.rs  mod.rs
src/commands/helpers/: arg_parsing.rs  batch_config.rs  deferred_denom.rs  fastx_io.rs  formatting.rs  index_loading.rs  input_reader.rs  log_ratio.rs  metadata.rs  mod.rs  output.rs  parquet_io.rs  passing_tracker.rs  seq_writer.rs
src/core/: encoding.rs  extraction.rs  merge.rs  mod.rs  orientation.rs  ring_buffer.rs  workspace.rs
src/indices/: inverted.rs  main.rs  mod.rs  parquet.rs  sharded.rs  sharded_main.rs
src/indices/inverted/: mod.rs  query.rs  query_loading.rs  shard_legacy.rs  shard_parquet.rs
src/indices/parquet/: arrow_build.rs  buckets.rs  manifest.rs  merge.rs  mod.rs  options.rs  streaming.rs
src/indices/parquet_cluster/: manifest.rs  mod.rs  options.rs  streaming.rs
tests/: arrow_integration_tests.rs  calibration_sweep.rs  cli_integration_tests.rs  cluster_chain_roundtrip.rs  cluster_extraction_roundtrip.rs  cluster_index_tests.rs  cluster_integration_tests.rs  config_integration_test.rs  consolidate_memory.rs  orient_integration_tests.rs  parquet_structure_tests.rs  readme_example_test.rs  shard_integration_tests.rs  unified_c_api_tests.rs
