[package]
name = "rype"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
needletail = "0.4"
rayon = "1.8"
libc = "0.2"  # New dependency for C types
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
zstd = "0.13"  # Compression for inverted index
arrow = { version = "57", default-features = false, features = ["ffi"], optional = true }

[dev-dependencies]
tempfile = "3.24.0"

[[bin]]
name = "debug_inverted"
path = "src/bin/debug_inverted.rs"

[features]
default = []
arrow = ["dep:arrow"]

