[package]
name = "rype"
version = "0.1.0"
edition = "2021"
authors = ["YOUR_NAME <YOUR_EMAIL>"]
description = "High-performance genomic sequence classification using minimizer-based k-mer sketching in RY space"
repository = "https://github.com/YOUR_USERNAME/rype"
homepage = "https://github.com/YOUR_USERNAME/rype"
documentation = "https://docs.rs/rype"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["bioinformatics", "genomics", "minimizer", "kmer", "classification"]
categories = ["science", "command-line-utilities"]
rust-version = "1.70"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
needletail = "0.4"
rayon = "1.8"
libc = "0.2"  # New dependency for C types
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
zstd = "0.13"  # Compression for inverted index
arrow = { version = "57", default-features = false, features = ["ffi"], optional = true }
parquet = { version = "57", default-features = false, features = ["zstd", "snap", "arrow"], optional = true }
bytes = { version = "1.5", optional = true }

[dev-dependencies]
tempfile = "3.24.0"

[[bin]]
name = "debug_inverted"
path = "src/bin/debug_inverted.rs"

[[example]]
name = "parquet_poc"
required-features = ["parquet"]

[[example]]
name = "parquet_main_poc"
required-features = ["parquet"]

[[example]]
name = "bench_fixed_impl"
required-features = ["parquet"]

[[example]]
name = "explore_row_group_stats"
required-features = ["parquet"]

[[example]]
name = "bench_filtered_load"
required-features = ["parquet"]

[[example]]
name = "bench_e2e_classification"
required-features = ["parquet"]

[features]
default = []
arrow = ["dep:arrow"]
parquet = ["dep:parquet", "dep:arrow", "dep:bytes"]

