[package]
name = "rype"
version = "0.1.0"
edition = "2021"
authors = ["YOUR_NAME <YOUR_EMAIL>"]
description = "High-performance genomic sequence classification using minimizer-based k-mer sketching in RY space"
repository = "https://github.com/YOUR_USERNAME/rype"
homepage = "https://github.com/YOUR_USERNAME/rype"
documentation = "https://docs.rs/rype"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["bioinformatics", "genomics", "minimizer", "kmer", "classification"]
categories = ["science", "command-line-utilities"]
rust-version = "1.70"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
needletail = "0.4"
rayon = "1.8"
libc = "0.2"  # New dependency for C types
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
zstd = "0.13"  # Compression for inverted index
flate2 = "1.1.8"  # Gzip compression for output
parquet = { version = "57", default-features = false, features = ["zstd", "snap", "arrow"] }
bytes = "1.5"
arrow = { version = "57", default-features = false }

[dev-dependencies]
tempfile = "3.24.0"

[[bin]]
name = "debug_inverted"
path = "src/bin/debug_inverted.rs"

[features]
default = []
# The arrow-ffi feature enables the FFI module for exporting Arrow RecordBatches
# The base arrow crate is always included as parquet code uses arrow types directly
# When arrow-ffi is enabled, it activates arrow's ffi feature for FFI_ArrowSchema etc.
arrow-ffi = ["arrow/ffi"]

